# rust-learn-wgpu

./: .gitignore  Cargo.toml  build_wasm.py  index.html  notes.md  readme.md  styles.css  tutorial_4.html  tutorial_5.html  tutorial_7.html  tutorial_8.html  wasm-package.js  wasm-package_bg.wasm  wasm-targets.json
code/klgl/: Cargo.toml
code/klgl/src/: camera.rs  camera_controller.rs  common.rs  file_loader.rs  fps_counter.rs  lib.rs  render_context.rs  resources.rs  rotator.rs  settings.rs  texture.rs
code/tutorial-content/: Cargo.toml
code/tutorial-content/src/: lib.rs
code/tutorial-embedded-content/: Cargo.toml
code/tutorial02-surface/: Cargo.toml
code/tutorial02-surface/src/: main.rs
code/tutorial03-pipeline/: Cargo.toml
code/tutorial03-pipeline/src/: lib.rs  main.rs
code/tutorial04-buffers-and-indices/: Cargo.toml
code/tutorial04-buffers-and-indices/src/: lib.rs  main.rs
code/tutorial05-textures/: Cargo.toml
code/tutorial05-textures/src/: main.rs
code/tutorial06-uniforms/: Cargo.toml
code/tutorial06-uniforms/src/: main.rs
code/tutorial07-instancing/: Cargo.toml
code/tutorial07-instancing/src/: lib.rs  main.rs
code/tutorial08-depth/: Cargo.toml
code/tutorial08-depth/src/: app.rs  main.rs
code/tutorial09-model-loading/: Cargo.toml
code/tutorial09-model-loading/src/: app.rs  main.rs  model.rs  models_draw_pass.rs
code/tutorial10-lights/: Cargo.toml
code/tutorial10-lights/src/: app.rs  lib.rs  main.rs  models_draw_pass.rs
code/tutorial2-surface/: Cargo.toml
code/tutorial2-surface/src/: lib.rs
code/tutorial3-pipeline/: Cargo.toml
code/tutorial3-pipeline/src/: lib.rs
code/tutorial4-buffers-and-indices/: Cargo.toml
code/tutorial4-buffers-and-indices/src/: lib.rs  main.rs  shader.wgsl
code/tutorial5-textures/: Cargo.toml
code/tutorial5-textures/src/: lib.rs
code/tutorial6-uniforms/: Cargo.toml
code/tutorial6-uniforms/src/: almost_equal.rs  camera.rs  camera_controller.rs  lib.rs  rotator.rs
code/tutorial7-instancing/: Cargo.toml
code/tutorial7-instancing/src/: lib.rs  line_vertex.rs
code/tutorial8-depth/: Cargo.toml
code/tutorial8-depth/src/: app.rs  display_depth_draw_pass.rs  lib.rs  lines_draw_pass.rs  model_vertex.rs  models_draw_pass.rs
code/tutorial9-model-loading/: Cargo.toml
code/tutorial9-model-loading/src/: app.rs  display_depth_draw_pass.rs  lib.rs  lines_draw_pass.rs  main.rs  model.rs  models_draw_pass.rs
code/wasm-target/: Cargo.toml
code/wasm-target/src/: lib.rs
content/: colored_vertices_shader.wgsl  display_depth_shader.wgsl  tutorial_5_shader.wgsl  tutorial_6_shader.wgsl  tutorial_7_shader.wgsl  tutorial_9_shader.wgsl
html/: tutorial_09.html  tutorial_10.html  tutorial_2.html  tutorial_3.html  tutorial_4.html  tutorial_5.html  tutorial_6.html
res/models/wooden_crate/: wooden_crate.mtl
tutorial2-surface/: index.html  package.json  wasm-package.js  wasm-package_bg.wasm
tutorial3-pipeline/: package.json  wasm-package.js  wasm-package_bg.wasm
tutorial4-buffers-and-indices/: package.json  wasm-package.js  wasm-package_bg.wasm
tutorial5-textures/: package.json  wasm-package.js  wasm-package_bg.wasm
