[package]
name = "klgl"
version = "0.1.0"
edition = "2024"
authors = ["Kostiantyn Lazukin"]
description = "Graphics library for wgpu"
repository = "https://github.com/Sunday111/rust-learn-wgpu"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[dependencies]
cfg-if = "1"
winit = { version = "0.30", features = ["rwh_06"] }
env_logger = "0.11"
log = "0.4"
wgpu = "24.0"
pollster = "0.4"
web-time = "1.1"
bytemuck = "1.22"
anyhow = "1.0"
cgmath = "0.18"
num-traits = "^0.2"
async-channel = "2.3.1"
async-std = "1.13.1"
tobj = { version = "3.2", default-features = false, features = ["async"]}
bimap = "0.6.3"

[dependencies.image]
version = "0.25"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wgpu = { version = "24.0", features = ["webgl"]}
reqwest = { version = "0.11" }
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}
