[package]
name = "wasm-target"
version = "0.1.0"
edition = "2024"
authors = ["Kostiantyn Lazukin"]
description = "Just a test"
repository = "https://github.com/Sunday111/rust-learn-wgpu"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"


[dependencies.tutorial2-surface]
path = "../tutorial2-surface"

[dependencies.tutorial3-pipeline]
path = "../tutorial3-pipeline"

[dependencies.tutorial4-buffers-and-indices]
path = "../tutorial4-buffers-and-indices"

[dependencies.tutorial5-textures]
path = "../tutorial5-textures"

[dependencies.tutorial6-uniforms]
path = "../tutorial6-uniforms"

[dependencies.tutorial7-instancing]
path = "../tutorial7-instancing"

[dependencies.tutorial8-depth]
path = "../tutorial8-depth"

[dependencies.tutorial9-model-loading]
path = "../tutorial9-model-loading"

[dependencies.image]
version = "0.25"
default-features = false
features = ["png", "jpeg"]
