[package]
name = "wasm-target"
version = "0.1.0"
edition = "2024"
authors = ["Kostiantyn Lazukin"]
description = "Just a test"
repository = "https://github.com/Sunday111/rust-learn-wgpu"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"


[dependencies.tutorial02-surface]
path = "../tutorial02-surface"

[dependencies.tutorial03-pipeline]
path = "../tutorial03-pipeline"

[dependencies.tutorial04-buffers-and-indices]
path = "../tutorial04-buffers-and-indices"

[dependencies.tutorial05-textures]
path = "../tutorial05-textures"

[dependencies.tutorial06-uniforms]
path = "../tutorial06-uniforms"

[dependencies.tutorial07-instancing]
path = "../tutorial07-instancing"

[dependencies.tutorial08-depth]
path = "../tutorial08-depth"

[dependencies.tutorial09-model-loading]
path = "../tutorial09-model-loading"

[dependencies.tutorial10-lights]
path = "../tutorial10-lights"

[dependencies.image]
version = "0.25"
default-features = false
features = ["png", "jpeg"]
